--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dependencies": {
         "d3": "3.5.6",
         "minimist": "1.1.3",
-        "jsdom": "3.x"
+        "jsdom": "3.1.2"
     },
     "devDependencies": {},
     "private": true
