--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dependencies": {
         "d3": "3.5.6",
         "minimist": "1.1.3",
-        "jsdom": "3.1.2"
+        "jsdom": "3.1.2",
+	"simple-statistics": "1.0.0"
     },
     "devDependencies": {},
     "private": true
