--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     }],
     "dependencies": {
         "d3": "3.5.6",
+	"d3-jetpack": "1.0.1",
         "minimist": "1.1.3",
         "jsdom": "3.1.2",
 	"simple-statistics": "1.0.0"
