Removed comment marks so that fonts will be installed with playbook.

--- a/playbook.yml
+++ b/playbook.yml
@@ -6,8 +6,8 @@
     - name: run `apt-cache update`
       apt: update_cache=yes
 
-    # - name: run `apt-cache upgrade`
-    #   apt: upgrade=yes
+    - name: run `apt-cache upgrade`
+      apt: upgrade=yes
 
     - name: install packages
       apt: pkg={{item}} state=installed
@@ -65,17 +65,17 @@
             requirements=requirements.txt
 
     # install fonts
-    # - name: List font zip files in repository font directory
-    #   shell: chdir=/var/www/reports/static/fonts ls -1 *.zip
-    #   register: font_files
+    - name: List font zip files in repository font directory
+      shell: chdir=/var/www/reports/static/fonts ls -1 *.zip
+      register: font_files
 
-    # - name: Create necessary font directory
-    #   command: sudo mkdir /usr/share/fonts/truetype/{{item}} creates=/usr/share/fonts/truetype/{{item}}
-    #   with_items: font_files.stdout_lines
+    - name: Create necessary font directory
+      command: sudo mkdir /usr/share/fonts/truetype/{{item}} creates=/usr/share/fonts/truetype/{{item}}
+      with_items: font_files.stdout_lines
 
-    # - name: Unzip font into directory
-    #   command: unzip /var/www/reports/static/fonts/{{item}} -d /usr/share/fonts/truetype/{{item}}
-    #   with_items: font_files.stdout_lines
+    - name: Unzip font into directory
+      command: unzip /var/www/reports/static/fonts/{{item}} -d /usr/share/fonts/truetype/{{item}}
+      with_items: font_files.stdout_lines
 
-    # - name: Update font cache
-    #   command: sudo fc-cache -fv
+    - name: Update font cache
+      command: sudo fc-cache -fv
