--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     }],
     "dependencies": {
         "d3": "3.5.6",
-	"d3-jetpack": "1.0.1",
+        "d3-jetpack": "CT-Data-Collaborative/d3-jetpack#bug/undefined-window",
         "minimist": "1.1.3",
         "jsdom": "3.1.2",
-	"simple-statistics": "1.0.0"
+        "simple-statistics": "1.0.0"
     },
     "devDependencies": {},
     "private": true
