--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }],
     "dependencies": {
         "d3": "3.5.6",
-        "d3-jetpack": "CT-Data-Collaborative/d3-jetpack#bug/undefined-window",
+        "d3-jetpack": "git://github.com/CT-Data-Collaborative/d3-jetpack.git#bug/undefined-window",
         "minimist": "1.1.3",
         "jsdom": "3.1.2",
         "simple-statistics": "1.0.0"
