--- a/deploy/templates/supervisor_program.conf
+++ b/deploy/templates/supervisor_program.conf
@@ -1,5 +1,5 @@
 [program:{{ app_name }}]
-command = /usr/local/bin/gunicorn {{ app_name }}:app -w 4
+command = {{ app_dir}}/venv/bin/gunicorn wsgi:app -w 4
 directory = {{ app_dir }}
 user = {{ user }}
 stdout_logfile = {{ app_dir }}/logs/gunicorn_stdout.log
